--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Club - 2022</title>
-    <link rel="stylesheet" href="style.css">
+
+    {% load static %}
+
+    <link rel="stylesheet" href="{% static 'tasks/style.css' %}">
 </head>
 <body>
     <video autoplay muted loop class="bgVideo">
-        <source src="media/background.mp4" type="video/mp4">
+        <source src="{% static 'tasks/media/background.mp4' %}" type="video/mp4">
       </video>
     <div class="container">
         <div style="text-align: center;">
