--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -16,7 +16,7 @@
       </video>
     <div class="container">
         <div style="text-align: center;">
-            <h3 class="animate-charcter">Cyber Club, Sri Sairam Institutions</h3>
+            <h3 class="animate-charcter">Sri Sai Ram Institute of Technology</h3>
         </div>
         <h1 class="infiniteFadein">
             "There are no limits to what you can accomplish, except the limits you place on your own thinking ..."
@@ -55,37 +55,48 @@
             - (@^&^@) -->
 
 
-            Bienvenue à l'événement d'aujourd'hui organisé par les membres de notre groupe parrainé par Cyber Club, Sri Sairam Institutions.
+            Bienvenue à l'événement de jeu <span>Capturez le drapeau</span> par les membres de notre groupe du Cyber Club, Sri Sairam Institute of Technology.
+            
             <br><br>
+
+            <div style="background-color: rgb(0, 110, 255); opacity: 80%; border: 10px dashed yellow; border-radius: 10px;">
+                <h2 style="color: tomato;">
+                    Rules:
+                </h2>
+                <ul>
+                    <li style="color: white">
+                        There will be total of 5 tasks which challenges you through some of the hacking methodologies used in real life
+                    </li>
+                    <li style="color: rgb(200, 255, 0);">
+                        This is an individual event and ONLY 1 PEOPLE will be declared as WINNER 
+                    </li>
+                    <li style="color: turquoise;">
+                        If you are skilled and brave enough to hack this website, try your best :D 
+                        <!-- If you have the guts to hack this website, try your best to crack the c0de :D  -->
+                    </li>
+                    <li>
+                        Send reports after completion of every task to any of this numbers (else you are Disqualified !)
+                        <br> <a href="http://wa.me/919791094659" target="_blank" rel="noopener noreferrer" style="color: gold;">Number 1 - +91 97910 94659</a>
+                        <br> <a href="http://wa.me/918778095727" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a>
+                    </li>
+                </ul>
+            </div>
+
+            <br><br>
+
             <span style="color: cyan;">BackStory:</span> <br><br>
 
             <span style="color: blueviolet;">
 
-            Когда-то существовала организация DeathBed, которая творила разные злодеяния с невиновными ... <br>
-            Ο ρόλος αυτής της οργάνωσης είναι να παίζει με το μυαλό των ανθρώπων και να τους κάνει να τρελαίνονται. <br>
-            Sie haben <a href="task1.html" target="_blank" rel="noopener noreferrer" style="color: blueviolet; text-decoration: none;">einige Fußspuren hinterlassen</a>, Ihr Ziel ist es, die Menschen hinter ihnen zu finden und ihren nächsten Schritt zu finden.
+                Жила-была организация под названием DeathBed, которая совершала разные зверства над невинными...                
+                <br>
+                Ο ρόλος αυτής της οργάνωσης είναι να παίζει με το μυαλό των ανθρώπων και χρησιμοποιώντας τους να κάνει κάποιου είδους παράνομη δραστηριότητα                
+                <br>
+                Sie haben <a href="task1.html" target="_blank" rel="noopener noreferrer" style="color: blueviolet; text-decoration: none;">einige Fußspuren hinterlassen</a>, Ihr Ziel ist es, die Menschen hinter ihnen zu finden und ihren nächsten Plan zu finden
             </span>
 
         </h3>
         <br><br>
-
-        <h1>
-            Rules:
-        </h1>
-        <ul style="font-size: 200%;">
-            <li>
-                totally 5 tasks... 
-            </li>
-            <li>
-                there will be only one winner 
-            </li>
-            <li>
-                If you have the guts to hack this website, try your best to crack the c0de :D 
-            </li>
-            <li>
-                Send reports after completion to this number +91 97910 94659 or +91 87780 95727
-            </li>
-        </ul>
         
         <div class="content">
             <h2 class="text_shadows text3d">
@@ -95,6 +106,19 @@
 
     </div>
 
+
+    <br><br>
+
+    <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
+        This website is done by 
+        <a href="http://instagram.com/thewachdog" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #f00; font-weight: 900;">
+            Bharath V
+        </a>
+        and 
+        <a href="http://instagram.com/darkness_.over._ruled" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: hotpink; font-weight: 900;">
+            Hareash S 
+        </a>
+    </footer>
 
 
 
