Frontend Done for Task 1 & 2

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
+    <title>Cyber Club 2022 | SSIT</title>
 
     {% load static %}
 
@@ -92,7 +92,7 @@
                 <br>
                 Ο ρόλος αυτής της οργάνωσης είναι να παίζει με το μυαλό των ανθρώπων και χρησιμοποιώντας τους να κάνει κάποιου είδους παράνομη δραστηριότητα                
                 <br>
-                Sie haben <a href="task1.html" target="_blank" rel="noopener noreferrer" style="color: blueviolet; text-decoration: none;">einige Fußspuren hinterlassen</a>, Ihr Ziel ist es, die Menschen hinter ihnen zu finden und ihren nächsten Plan zu finden
+                Sie haben <a href="osint.html" target="_blank" rel="noopener noreferrer" style="color: blueviolet; text-decoration: none;">einige Fußspuren hinterlassen</a>, Ihr Ziel ist es, die Menschen hinter ihnen zu finden und ihren nächsten Plan zu finden
             </span>
 
         </h3>
@@ -110,7 +110,7 @@
     <br><br>
 
     <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
-        This website is done by 
+        This website was done by 
         <a href="http://instagram.com/thewachdog" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #f00; font-weight: 900;">
             Bharath V
         </a>
