--- a/tasks/templates/task1.html
+++ b/tasks/templates/task1.html
@@ -4,29 +4,129 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
-    <link rel="stylesheet" href="style.css">
+    <title>OSINT | Cyber Club 2022</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'tasks/style.css' %}">
 </head>
 <body>
     <video autoplay muted loop class="bgVideo">
-        <source src="media/background.mp4" type="video/mp4">
+        <source src="{% static 'tasks/media/background.mp4' %}" type="video/mp4">
       </video>
     <div class="container">
-        <div style="text-align: center;">
-            <h3 class="animate-charcter">Cyber Club, Sri Sairam Institutions</h3>
+        <div style="text-align: center; padding: 6%;">
+            <h1 class="animate-charcter">Sri Sairam Institute of Technology</h1>
         </div>
     </div>
     <h1>
-        Task 1 
+        <u>
+            OSINT
+        </u>
     </h1>
+    <h3 style="color: magenta;">
+        The attackers have accidentally left an image out in the public. Use this information to dig deeper about them !!!
+    </h3>
+    <img src="{% static 'tasks/media/IMG_20220424_180614.jpg' %}" alt="" style="max-width: 35%;">
+
+    <br><br>
+
+    <div class="container" 
+    style="background-color: teal; 
+    opacity: 0.9; 
+    border: 10px outset hotpink; 
+    border-radius: 10px;
+    font-size: 20px;
+    text-align: center;">
+        <span style="font-size: 25px; color: orange; text-align: center;">
+            Find answers for these questions so that you can proceed in this event
+        </span>
+
+        <br><br>
+
+        <ol  style="text-align: left;">
+            <li style="color: rgb(215, 175, 255);">
+                When was the photo taken ?
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="DD/MM/YYYY">
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Date" data-bs-content="Hmm... maybe check the properties of the picture ?">Hint</a>
+                    <button class="btn btn-info" type="button" id="button-addon2">Submit</button>
+                </div>
+            </li>
+            <li style="color: black;">What was the commercial name of the device in which the photo was taken ?
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="****** ***** ***">
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Device" data-bs-content="Search the device name on Internet, ez :/">Hint</a>
+
+                    <button class="btn btn-info" type="button" id="button-addon2">Submit</button>
+                </div>
+            </li>
+            <li style="color: rgb(0, 247, 255);">
+                Name the default Operating System in the device with its version.
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="******* **">
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Software" data-bs-content="You can find this if you have found the previous quesion's answer.">Hint</a>
+                    <button class="btn btn-info" type="button" id="button-addon2">Submit</button>
+                </div>
+            </li>
+            <li style="color: rgb(255, 161, 250);">
+                Where was the photo taken ?
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="*************** ****">
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Location" data-bs-content="Don't use Google for this task, it sucks :[">Hint</a>
+                    <button class="btn btn-info" type="button" id="button-addon2">Submit</button>
+                </div>
+            </li>
+            <li>
+                Around that location there was a place which was famous for shooting movies and commercials. What was the name of that place ?
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="*** **** ****">
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Hotspot" data-bs-content="BIGG BOSS shooting place Xd">Hint</a>
+                    <button class="btn btn-info" type="button" id="button-addon2">Submit</button>
+                </div>
+            </li>
+        </ol>
+
+        <button
+        class="btn btn-lg btn-primary"
+        >
+            Proceed 
+        </button>
+    </div>
+
+    <br><br>
+
+    <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
+        This website is done by 
+        <a href="http://instagram.com/thewachdog" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #f00; font-weight: 900;">
+            Bharath V
+        </a>
+        and 
+        <a href="http://instagram.com/darkness_.over._ruled" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: hotpink; font-weight: 900;">
+            Hareash S 
+        </a>
+    </footer>
 
 
-    morse code audio 
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
+    <script>
+        // for popover
+        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+            var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl)
+        })
 
+        var popover = new bootstrap.Popover(document.querySelector('.example-popover'), {
+        container: 'body'
+        })
 
+        var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
+            trigger: 'focus'
+        })
 
-
-
-    <script src="indexjs.js"></script>
+    </script>
 </body>
 </html>
