--- a/tasks/templates/404.html
+++ b/tasks/templates/404.html
@@ -24,7 +24,7 @@
     </div>
 
     <audio controls>
-        <source src="{% static 'tasks/media/hacker.m4a' %}" type="audio/mp4">
+        <source src="{% static 'tasks/media/hacker.wav' %}" type="audio/wav">
     </audio>
     
     <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
