--- a/tasks/templates/task0.html
+++ b/tasks/templates/task0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
+    <title>Warmup | Cyber Club 2022</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -23,12 +23,106 @@
         </div>
     </div>
 
-    <a href="sample1.html"></a>
-    <a href="sample2.html"></a>
-    <a href="sample3.html"></a>
+    <h1 style="color: fuchsia;">
+        <u>Warmup</u>
+    </h1>
 
-    <input type="text">
-    
+    <ul style="
+    color: deepskyblue;
+    list-style-type: none;
+    background-color: dimgrey; 
+    border-radius: 10px; 
+    opacity: 0.8;
+    font-size: 25px;
+    ">
+        <li>
+            Let's start with a task that isn't technical.
+        </li>
+        <li>
+            <span style="color: rgb(0, 255, 76);">
+                You need to find the number of words in the given audio. [Don't forget your headphones ! ] 
+            </span>
+        </li>
+        <li>
+            <span style="color: gold;">
+                Find the number of words for every audio and you can advance to next task.
+            </span>
+        </li>
+        <li>
+            Wishing you the best of luck :)
+        </li>
+    </ul>
+
+    <table style="margin: 0 auto;">
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="{% static 'tasks/media/audio1.wav' %}" type="audio/wav">
+                </audio>
+            </td>
+            <td>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="*" id="a1">
+                    <button class="btn btn-info" type="button" id="answer1" onclick="ans1()">Submit</button>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="{% static 'tasks/media/audio2.wav' %}" type="audio/wav">
+                </audio>
+            </td>
+            <td>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="**" id="a2">
+                    <button class="btn btn-info" type="button" id="answer2" onclick="ans2()">Submit</button>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="{% static 'tasks/media/audio3.wav' %}" type="audio/wav">
+                </audio>
+            </td>
+            <td>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="**" id="a3">
+                    <button class="btn btn-info" type="button" id="answer3" onclick="ans3()">Submit</button>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="{% static 'tasks/media/audio4.wav' %}" type="audio/wav">
+                </audio>
+            </td>
+            <td>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="***" id="a4">
+                    <button class="btn btn-info" type="button" id="answer4" onclick="ans4()">Submit</button>
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="{% static 'tasks/media/audio5.wav' %}" type="audio/wav">
+                </audio>
+            </td>
+            <td>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="***" id="a5">
+                    <button class="btn btn-info" type="button" id="answer5" onclick="ans5()">Submit</button>
+                </div>
+            </td>
+        </tr>
+    </table>
+        <p id="main">
+        
+        </p>
     <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
         This website is done by 
         <a href="http://instagram.com/thewachdog" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #f00; font-weight: 900;">
@@ -43,4 +137,5 @@
 
 <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="{% static 'tasks/task0js.js' %}"></script>
 </html>
