--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -5,116 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Club - 2022</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'tasks/style.css' %}">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,300&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     <video autoplay muted loop class="bgVideo">
-        <source src="{% static 'tasks/media/background.mp4' %}" type="video/mp4">
+        <source src="media/background.mp4" type="video/mp4">
       </video>
     <div class="container">
-        <div style="text-align: center; padding: 6%;">
-            <h1 class="animate-charcter">Sri Sairam Institute of Technology</h1>
+        <div style="text-align: center;">
+            <h3 class="animate-charcter">Cyber Club, Sri Sairam Institutions</h3>
         </div>
     </div>
-
     <h1>
-        <u>
-            ENCODED
-        </u>
+        Task 3 
     </h1>
 
-    <br><br>
-
-    <h3 style="color: mediumvioletred; background-color: yellow;">
-        This audio was captured when they talked to a victim over phone. <br>
-        So your task is to decrypt the audio and find the person's name whom are they talking about.
-    </h3>
-
-    <br><br>
-
-    <audio controls>
-        <source src="{% static 'tasks/media/RAW.wav' %}" type="audio/wav">
-    </audio>
-
-    <br><br>
-
-    <div class="container" style="color: rgb(215, 255, 72);">
-        <h2>
-            What was the name of the person who played a major role in it ?
-        </h2>
-        <form action="QRMania.html" method="post">
-            <div class="input-group mb-3">
-                <input type="charValues" class="form-control" placeholder="******* ****** *****" id="answer" name="answer">
-                <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Encryption Name" data-bs-content="I'm damn sure you heard the name of the encryption."
-                style="background-image: linear-gradient(to bottom , rgb(255, 72, 0), white, rgb(4, 116, 0)); color: black;"
-                >
-                    Hint 0
-                </a>
-                <a tabindex="0" class="btn btn-lg btn-light" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Place -> Name" data-bs-content="After decryption, search that name on google so you will find that person's name"
-                style="background-image: linear-gradient(to bottom, rgb(255, 72, 0), rgb(255, 255, 255), rgb(4, 116, 0)); color: black;"    
-                >
-                    Hint 1
-                </a>
-                <a tabindex="0" class="btn btn-lg btn-success" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Rank" data-bs-content="Mention his rank along with his name."
-                style="background-image: linear-gradient(to bottom , rgb(255, 72, 0), white, rgb(4, 116, 0)); color: black;"
-                >
-                    Hint 2
-                </a>
-    
-                {% csrf_token %}
-                
-                <button class="btn btn-info" type="submit" id="button-addon2 ansButton">Submit</button>
-            </div>
-        </form>
-    </div>
-
-    {% if message %}
-        <script>alert('{{ message }}');</script>
-    {% endif %}
-    <!-- <br><br>
-
-    <p id="main">
-        
-    </p> -->
-
-    <br><br>
-    
-    <footer style="background-color: #0f0; color: #000; font-size: 20px; opacity: 0.7;">
-        This website is done by 
-        <a href="http://instagram.com/thewachdog" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: #f00; font-weight: 900;">
-            Bharath V
-        </a>
-        and 
-        <a href="http://instagram.com/darkness_.over._ruled" target="_blank" rel="noopener noreferrer" style="text-decoration: none; color: hotpink; font-weight: 900;">
-            Hareash S 
-        </a>
-    </footer>
 
 
-<!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    
-    <script>
-        // for popover
-        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-            var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-            return new bootstrap.Popover(popoverTriggerEl)
-        })
+    qr code, upload qr code in insta, github, etc 
+    qr code scan pana decimal or hex la irkanum
+    adha convert pannanum
+    oru ans ku nerya qr code use use pananum
+    5ques in this format
 
-        var popover = new bootstrap.Popover(document.querySelector('.example-popover'), {
-        container: 'body'
-        })
+    or orey qr code , andha pic a part part a cut panni 
+    oru oru place la vaikanumm .. idu mass a irukum
+    aprm avanga kandu pudicha yella code a yum onna join panitu adha scan pannanum 
 
-        var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
-            trigger: 'focus'
-        })
+    if ans correct, congo popup
+    else 3 tries .. if exceeded, task closed (Block using IP)
 
-    </script>
-    <!-- <script src="{% static 'tasks/task2js.js' %}"></script> -->
+    insta 
+    github 
+    facebook 
+    reddit 
+
+    <form action="encoded.html" method="post">
+        {% csrf_token %}
+        <button class="btn btn-info" type="submit" id="button-addon2 ansButton">Submit</button>
+    </form>
 </body>
 </html>
