Fixed minor bugs

--- a/tasks/templates/404.html
+++ b/tasks/templates/404.html
@@ -36,7 +36,7 @@
         
         <h3 style="color: magenta; background-color: mediumseagreen; border-radius: 10px; padding: 10px;">
             Don't cheat bruh / sis, it won't get you anything except some temporary happiness ... <br>
-            I can block you IP from this website, but i'm giving you another chance to change .. better use it. <br>
+            I can block your IP from this website, but i'm giving you another chance to change .. better use it. <br>
             Or don't ... i dont care.
         </h3>
     </div>
