--- a/tasks/templates/congratulations.html
+++ b/tasks/templates/congratulations.html
@@ -83,6 +83,14 @@
             </tr>
             <tr>
                 <td>
+                    Host 
+                </td>
+                <td>
+                    Hareash S 
+                </td>
+            </tr>
+            <tr>
+                <td>
                     Special Thanks to 
                 </td>
                 <td>
