--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -61,7 +61,7 @@
         <h3 style="color: darkblue;">
         Now we got some details from attacker 
         <span style="font-family: monospace; font-size: 25px; background-color: grey; text-decoration: none;">
-            <a href="github.com/thewachdog/l4dyjd">
+            <a href="https://github.com/thewachdog/l4dyjd">
                 more details here 
             </a>
         </span>
