--- a/tasks/templates/task0.html
+++ b/tasks/templates/task0.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,300&display=swap" rel="stylesheet"> 
 
 </head>
-<body>
+<body oncontextmenu="return false;">
     <video autoplay muted loop class="bgVideo">
         <source src="{% static 'tasks/media/background.mp4' %}" type="video/mp4">
       </video>
