--- a/tasks/templates/task4.html
+++ b/tasks/templates/task4.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="{% static 'tasks/style.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,300&display=swap" rel="stylesheet"> 
 </head>
-<body>
+<body oncontextmenu="return false;">
     <video autoplay muted loop class="bgVideo">
         <source src="{% static 'tasks/media/background.mp4' %}" type="video/mp4">
       </video>
