--- a/tasks/templates/404.html
+++ b/tasks/templates/404.html
@@ -34,10 +34,12 @@
 
         <br><br>
         
-        <h3 style="color: magenta; background-color: mediumseagreen; border-radius: 10px; padding: 10px;">
+        <h3 style="color: magenta; background-color: mediumseagreen; border-radius: 10px; padding: 10px; opacity: 0.9;">
             Don't cheat bruh / sis, it won't get you anything except some temporary happiness ... <br>
             I can block your IP from this website, but i'm giving you another chance to change .. better use it. <br>
-            Or don't ... i dont care.
+            Or don't ... i dont care. <br>
+            *Inserts samuthirakani advice template* <br>
+            <img src="{% static 'tasks/media/samudhirakaniAdvisor.webp' %}" alt="">
         </h3>
     </div>
 
