--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -69,7 +69,7 @@
                         There will be total of 5 tasks which challenge you through some of the hacking methodologies used in real life
                     </li>
                     <li style="color: rgb(200, 255, 0);">
-                        This is an individual event and ONLY 1 PERSON will be declared WINNER 
+                        This is an individual event and ONLY 1 PERSON will be declared as WINNER 
                     </li>
                     <li style="color: turquoise;">
                         If you are skilled and brave enough to hack this website, try your best :D 
@@ -77,8 +77,8 @@
                     </li>
                     <li>
                         Send reports after the completion of every task to any of these numbers (otherwise you are Disqualified !)
-                        <br> <a href="http://wa.me/919791094659" target="_blank" rel="noopener noreferrer" style="color: gold;">Number 1 - +91 97910 94659</a>
-                        <br> <a href="http://wa.me/918778095727" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a>
+                        <br> <a href="https://api.whatsapp.com/send/?phone=919791094659&text&app_absent=0" target="_blank" rel="noopener noreferrer" style="color: gold;">Number 1 - +91 97910 94659</a>
+                        <br> <a href="https://api.whatsapp.com/send/?phone=918778095727&text&app_absent=0" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a> <br>
                     </li>
                 </ul>
             </div>
