--- a/tasks/templates/task4.html
+++ b/tasks/templates/task4.html
@@ -75,7 +75,7 @@
                 Name of the lake in which the photo was taken.
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="*************** ****" id="a4">
-                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Location" data-bs-content="Are you sure you can only search text on the Internet">Hint</a>
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Location" data-bs-content="DONT. USE. GOOGLE FOR THIS. USE YANDEX.">Hint</a>
                     <button class="btn btn-info" type="button" id="answer4" onclick="ans4()">Submit</button>
                 </div>
             </li>
@@ -83,7 +83,7 @@
                 Around that location there was a place which was well known for shooting movies and commercials. What was the place ?
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="*** **** ****" id="a5">
-                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Hotspot" data-bs-content="BIGG BOSS shooting place :D">Hint</a>
+                    <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Hotspot" data-bs-content="BIGG BOSS shooting place xd">Hint</a>
                     <button class="btn btn-info" type="button" id="answer5" onclick="ans5()">Submit</button>
                 </div>
             </li>
