--- a/tasks/templates/congratulations.html
+++ b/tasks/templates/congratulations.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
+    <title>Congrats ! | Cyber Club 2022</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -38,12 +38,9 @@
                 flag{1 Tr!3d h4rd3r}
             </u>
         </h1>
-
-        <br>
-
         Copy paste the above text to any one of the below number ASAP and report back to us to become a winner B-) <br>
-        <br> <a href="http://wa.me/919791094659" target="_blank" rel="noopener noreferrer" style="color: gold;">Number 1 - +91 97910 94659</a>
-        <br> <a href="http://wa.me/918778095727" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a> <br>
+        <br> <a href="https://api.whatsapp.com/send/?phone=919791094659&text&app_absent=0" target="_blank" rel="noopener noreferrer" style="color: gold;">Number 1 - +91 97910 94659</a>
+        <br> <a href="https://api.whatsapp.com/send/?phone=918778095727&text&app_absent=0" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a> <br>
         <span>
             You are more capable of what you think, use that wisely ;]
         </span>
@@ -64,7 +61,7 @@
             </u>
         </h2>
 
-        <table style="margin: 0 auto; color: rgb(252, 118, 203);">
+        <table style="margin: 0 auto; color: rgb(252, 118, 203); font-size: 20px;">
             <tr>
                 <td>
                     Programming
