--- a/tasks/templates/task1.html
+++ b/tasks/templates/task1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
+    <title>Eazy Peazy | Cyber Club 2022</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -38,6 +38,9 @@
             <br>
             <span style="color: yellow;">
                 [NOTE: the answer must be in corresponding case , if the character is in uppercase, you MUST submit the value in uppercase, etc]
+            </span>
+            <span>
+                Almost forgot, the length of the Hex value is 2 characters and the length of Bin value is 6 characters (used for this task)
             </span>
 
             <ul style="color: rgb(255, 34, 34); font-weight: 1000%;">
