--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Club - 2022</title>
+    <title>QRMania | Cyber Club 2022</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -94,7 +94,8 @@
 
         <form action="encoded.html" method="post">
             <div class="input-group mb-3">
-                <input type="charValues" class="form-control" placeholder="*** **** ** **" id="answer" name="answer">    
+                <input type="charValues" class="form-control" placeholder="*** **** ** **" id="answer" name="answer">  
+                <a tabindex="0" class="btn btn-lg btn-warning" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Location" data-bs-content="web.archive.org ... it will be useful when you are stuck">Hint</a>  
                 {% csrf_token %}
                 <button class="btn btn-info" type="submit" id="button-addon2 ansButton">Submit</button>
             </div>
