JS Obfuscate | Easter Eggs

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+
+<!-- 
+    An important clue, if you felt like you are stucked, just search on internet ( regardless of what info do you have)
+
+    And hacking is not for everyone .. they say if want to become a hacker, you need to be a born hacker,
+    so don't worry if you are struggled in these tasks, this isn't for you .. but you are an expert in other fields (drawing, dancing, reading, etc, etc)
+    What matters is that whether you are doing what you like or not .. productively
+    thats it
+
+    Wishing you all the best guys .. and thank you for reading <3 
+    - barat
+ -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -69,7 +82,33 @@
                         There will be total of 5 tasks which challenge you through some of the hacking methodologies used in real life
                     </li>
                     <li style="color: rgb(200, 255, 0);">
-                        This is an individual event and ONLY 1 PERSON will be declared as WINNER 
+                        This event is an individual event and consists of 3 winners 
+                        <table style="margin: 0 auto; color: indigo;">
+                            <tr>
+                                <td>
+                                    Prize 1 
+                                </td>
+                                <td>
+                                    Rs.300/- 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Prize 2 
+                                </td>
+                                <td>
+                                    Rs.200/- 
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    Prize 3
+                                </td>
+                                <td>
+                                    Rs.100/- 
+                                </td>
+                            </tr>
+                        </table>
                     </li>
                     <li style="color: turquoise;">
                         If you are skilled and brave enough to hack this website, try your best :D 
