--- a/tasks/templates/sample2.html
+++ b/tasks/templates/sample2.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!-- 
+    If it is easy, everyone will do it. Then what's the point of having you ?
+    The tea's gone cold i'm wondering why i got out of bed at all
+    The morning rain clouds up my window, but i can't see at all
+    Even if i could it all be gray, but your picture on my wall
+    It reminds me that is not so bad, that is not so bad ...
+
+    - Stan(Eminem ft. Dido)
+ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
