--- a/tasks/templates/sample3.html
+++ b/tasks/templates/sample3.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!-- 
+    The tea's gone cold i'm wondering why i got out of bed at all
+    The morning rain clouds up my window, but i can't see at all
+    Even if i could it all be gray, but your picture on my wall
+    It reminds me that is not so bad, that is not so bad ...
+
+    - Stan(Eminem ft. Dido)
+ -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
