--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -60,7 +60,7 @@
     -->
         <h3 style="color: darkblue;">
         Now we got some details from attacker 
-        <span style="font-family: monospace; font-size: 25px; background-color: grey; text-decoration: none;">
+        <span style="font-family: monospace; font-size: 25px; background-color: grey; text-decoration: none; color: rgb(153, 153, 255);">
             <a href="https://github.com/thewachdog/l4dyjd">
                 more details here 
             </a>
@@ -120,4 +120,19 @@
 
 <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+        // for popover
+        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+            var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl)
+        })
+
+        var popover = new bootstrap.Popover(document.querySelector('.example-popover'), {
+        container: 'body'
+        })
+
+        var popover = new bootstrap.Popover(document.querySelector('.popover-dismiss'), {
+            trigger: 'focus'
+        })
+    </script>
 </html>
