Final Production Build

--- a/tasks/templates/task1.html
+++ b/tasks/templates/task1.html
@@ -40,9 +40,15 @@
                 [NOTE: the answer must be in corresponding case , if the character is in uppercase, you MUST submit the value in uppercase, etc]
             </span>
             <br>
-            <span>
+            <!-- <span>
                 Almost forgot, the length of the Hex value is 2 characters and the length of Bin value is 6 characters (used for this task)
-            </span>
+            </span> 
+            Nee moodu dda boomer uhhh
+
+            hex values la 0x nu start aagum
+            binary values na use panadhu 6 digit dha use pannen .. but naa 0b nnu munadi poda marandhutan :')
+
+            -->
 
             <ul style="color: rgb(255, 34, 34); font-weight: 1000%;">
                 <li>
