--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -48,7 +48,7 @@
     
         if ans correct, congo popup
         else 3 tries .. if exceeded, task closed (Block using IP)
-        (idhu pannala avaga paavom laaa :[ )
+        (idhu pannala avaga paavom laaa :[ so pannala :-) )
     
         insta 
         github 
