--- a/tasks/templates/task4.html
+++ b/tasks/templates/task4.html
@@ -29,7 +29,10 @@
     <h3 style="color: magenta;">
         The attackers have accidentally left an image out in the public. Use this information to dig deeper about them !!!
     </h3>
-    <img src="{% static 'tasks/media/IMG_20220424_180614.jpg' %}" alt="" style="max-width: 35%;">
+
+    <a href="{% static 'tasks/media/IMG_20220424_180614.jpg' %}">
+        <img src="{% static 'tasks/media/IMG_20220424_180614.jpg' %}" alt="" style="max-width: 35%;">
+    </a>
 
     <br><br>
 
