Removed Eminem Songs :(

--- a/tasks/templates/congratulations.html
+++ b/tasks/templates/congratulations.html
@@ -64,7 +64,7 @@
         <table style="margin: 0 auto; color: rgb(252, 118, 203); font-size: 20px;">
             <tr>
                 <td>
-                    Programming
+                    Programming & Testing
                 </td>
                 <td>
                     Bharath V
