--- a/tasks/templates/task2.html
+++ b/tasks/templates/task2.html
@@ -88,7 +88,7 @@
                 Then you have to find the 4 word sequence which matches the string pattern (as mentioned in input box with '*')
             </li>
             <li>
-                NOTE: The answer will and must form a pattern
+                If you got stuck, search that whole string on internet, you can find the pattern ... 
             </li>
         </ul>
 
