--- a/tasks/templates/task3.html
+++ b/tasks/templates/task3.html
@@ -50,7 +50,7 @@
         <form action="osint.html" method="post">
             <div class="input-group mb-3">
                 <input type="charValues" class="form-control" placeholder="******* ****** *****" id="answer" name="answer">
-                <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Encryption Name" data-bs-content="I'm damn sure you heard the name of the encryption."
+                <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Encryption Name" data-bs-content="I'm damn sure you heard the name of the encryption (it is used in WWII)"
                 style="background-image: linear-gradient(to bottom , rgb(255, 72, 0), white, rgb(4, 116, 0)); color: black;"
                 >
                     Hint 0
