--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -120,7 +120,7 @@
                         <br> <a href="https://api.whatsapp.com/send/?phone=918778095727&text&app_absent=0" target="_blank" rel="noopener noreferrer" style="color: rgb(0, 209, 199);">Number 2 - +91 87780 95727</a> <br>
                     </li>
                     <li>
-                        Last but not least if you got stuck on ANY TASK just search on Internet first !!! 
+                        Last but not least if you got stuck on ANY TASK just search on Internet first (even if its makes no sense to search it on internet) !!! 
                     </li>
                 </ul>
             </div>
