--- a/tasks/templates/task1.html
+++ b/tasks/templates/task1.html
@@ -40,6 +40,10 @@
                 [NOTE: the answer must be in corresponding case , if the character is in uppercase, you MUST submit the value in uppercase, etc]
             </span>
             <br>
+            <span>
+                Use inspect element to find answers; If you don't heard of this name before, learn and do.
+            </span>
+            <br>
             <!-- <span>
                 Almost forgot, the length of the Hex value is 2 characters and the length of Bin value is 6 characters (used for this task)
             </span> 
